<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="16dp"
    android:background="#FFFFFF"
    >
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/gilroy_semibold"
        android:text="@string/menu_about"
        android:textAlignment="textStart"
        android:textStyle="normal"
        android:textSize="24sp"
        android:textColor="#131619"
        />
    <TextView
        android:id="@+id/tvText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/gilroy_regular"
        android:text="@string/about_text"
        android:textAlignment="textStart"
        android:textStyle="normal"
        android:textSize="18sp"
        android:textColor="#131619"
        />
    <TextView
        android:id="@+id/tvMyFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvText"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/gilroy_regular"
        android:text="@string/my_full_name"
        android:textAlignment="textStart"
        android:textStyle="normal"
        android:textSize="16sp"
        android:textColor="#131619"
        />
    <TextView
        android:id="@+id/tvMyEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvMyFullName"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/gilroy_regular"
        android:text="@string/my_email"
        android:textAlignment="textStart"
        android:textStyle="normal"
        android:textSize="16sp"
        android:textColor="#131619"
        />
    <TextView
        android:id="@+id/tvHHLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvMyEmail"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/gilroy_regular"
        android:autoLink="web"
        android:text="@string/my_head_hunter"
        android:textAlignment="textStart"
        android:textStyle="normal"
        android:textSize="16sp"
        android:textColor="#131619"
        />
</androidx.constraintlayout.widget.ConstraintLayout>